# BubbleUp

./: .gitignore  CHANGELOG.md  GameJam09.cabal  LICENSE  TODO.md  buildAppimage.sh  flake.nix
.github/workflows/: fourmolu.yaml  haskell.yaml  linter.yaml
app/: Main.hs
assets/clouds/: cloud.kra
assets/title_screen/: title_screen.kra
src/: Controller.hs  GlossyRuler.hs  HighScore.hs  Math.hs  Model.hs  Sound.hs  View.hs
src/View/: Frog.hs
