cabal-version: 3.0
name:          GameJam09
version:       0.1.0.0
build-type:    Simple
license:       BSD-3-Clause
license-file:  LICENSE
category:      Game

data-files:
  assets/**/*.bmp
  assets/**/*.wav

common warnings
  ghc-options: -Wall

executable GameJam09
  import: warnings
  main-is: Main.hs

  hs-source-dirs:
    app
    src

  default-language: GHC2021

  build-depends:
      base ^>=4.18.2.0,
      MonadRandom,
      bytestring,
      containers,
      directory,
      filepath,
      extra,
      gloss,
      ALUT,
      random

  ghc-options:
    -O2
    -threaded
    -static
